@@ -16,6 +16,7 @@ SF Patch #1455842 - minor mediafilter fixes
 - SF Patch #1456173 - updated database_schema.sql for Oracle (partially fixes SF bug #1455290)
 
 (Larry Stone)
+- SF Patch #1456751 - Fix Packager command's output message
 - SF Patch #1456761 - PluginManager config-reading bugs (fix patch #1455842)
 - SF Patch #1455813 - cleanup dspace.cfg for 1.4
 - SF Patch #1455904 - fix crosswalk validation in 1.4alpha1
